Updated from document

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="style.css">
 
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="dist/js/bootstrap.min.js"></script>  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="dist/js/bootstrap.min.js"></script> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -14,8 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                                <img src="images/logo.jpg" alt="Saverite Logo" style="height: 100px; width: 200px;">
-
+                <img src="images/logo.jpg" alt="Saverite Logo" style="height: 100px; width: 200px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -27,12 +27,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="invest.html">Invest</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="faq.html">FAQs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -51,11 +45,9 @@
     <div class="row">
       <div class="col-md-6 mb-4">
         <h5>Contact Details</h5>
-        <p><strong>Address:</strong> No 1 Dr. Olowookere Street, Governors Road, Ikotun, Lagos</p>
-        <p><strong>Email:</strong> info@Saverite.com</p>
-        <p><strong>Phone:</strong> 09031341125, 09031584141</p>
-        <p><strong>Instagram:</strong> <a href="https://instagram.com/fajo_monie">@fajo_monie</a></p>
-        <p><strong>Twitter:</strong> <a href="https://twitter.com/fajo_monie">@fajo_monie</a></p>
+        <p><strong>Address:</strong> House 4 Road 3 Unilag Estate Idimu</p>
+        <p><strong>Email:</strong> enquiries@saveriteapp.com</p>
+        <p><strong>Phone:</strong> +234 904 000 2222</p>
       </div>
 
       <div class="col-md-6">
@@ -108,9 +100,9 @@
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                 <h5 class="text-white mb-4">Contact Us</h5>
                 <ul class="list-unstyled">
-                    <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Lagos, Nigeria</li>
-                    <li class="mb-2"><i class="fas fa-envelope me-2"></i> hello@Saverite.com</li>
-                    <li><i class="fas fa-phone me-2"></i> +234 800 000 0000</li>
+                    <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> House 4 Road 3 Unilag Estate Idimu</li>
+                    <li class="mb-2"><i class="fas fa-envelope me-2"></i> enquiries@saveriteapp.com</li>
+                    <li><i class="fas fa-phone me-2"></i> +234 904 000 2222</li>
                 </ul>
             </div>
             <div class="col-lg-3 col-md-6">
