--- a/index.html
+++ b/index.html
@@ -31,12 +31,6 @@
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="invest.html">Invest</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="faq.html">FAQs</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -53,7 +47,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <h1 class="display-4 fw-bold mb-4">Smart Savings & Investment Platform</h1>
-                    <p class="lead mb-4">Saverite helps you save and invest with ease, offering competitive returns on your savings and flexible investment options.</p>
+                    <p class="lead mb-4">Saverite helps you save with ease, offering competitive returns on your savings and flexible target options.</p>
                     <div class="d-flex flex-wrap">
                         <a href="#"><img src="images/google.png" alt="Google Play" class="app-badge"></a>
                         <a href="#"><img src="images/apple.png" alt="App Store" class="app-badge"></a>
@@ -71,34 +65,43 @@
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="fw-bold">Why Choose Saverite?</h2>
-                <p class="text-muted">We make saving and investing simple, accessible, and rewarding</p>
+                <p class="text-muted">We make saving simple and automatic, regardless of the amount.                </p>
             </div>
             <div class="row g-4">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="text-center p-4">
                         <div class="feature-icon">
                             <i class="fas fa-percentage"></i>
                         </div>
                         <h4>High Interest Rates</h4>
-                        <p>Earn up to 15% interest on your savings, significantly higher than traditional banks.</p>
+                        <p>Earn up to 20% interest on your savings, significantly higher than traditional banks.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="text-center p-4">
                         <div class="feature-icon">
                             <i class="fas fa-lock"></i>
                         </div>
-                        <h4>Secure Savings</h4>
-                        <p>Your funds are safe with our secure platform and insured investment partners.</p>
+                        <h4>Save as little as N1,000 Daily</h4>
+                        <p>Any one can save regardless of the amount.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="text-center p-4">
                         <div class="feature-icon">
                             <i class="fas fa-hand-holding-usd"></i>
                         </div>
-                        <h4>Flexible Withdrawals</h4>
-                        <p>Access your funds whenever you need them with our easy withdrawal process.</p>
+                        <h4>No Hidden Charges</h4>
+                        <p>No hidden charges on our services.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="text-center p-4">
+                        <div class="feature-icon">
+                            <i class="fas fa-hand-holding-usd"></i>
+                        </div>
+                        <h4>Emergency Loan</h4>
+                        <p>Every active member is entitled to an emergency loan.</p>
                     </div>
                 </div>
             </div>
@@ -110,7 +113,7 @@
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="fw-bold">How Saverite Works</h2>
-                <p class="text-muted">Start saving and investing in just a few simple steps</p>
+                <p class="text-muted">Start saving in just a few simple steps</p>
             </div>  
             <div class="row g-4">
                 <div class="col-md-4">
@@ -135,8 +138,8 @@
                     <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body text-center p-4">
                             <span class="badge bg-primary rounded-circle mb-3" style="width: 50px; height: 50px; line-height: 50px; font-size: 1.2rem;">3</span>
-                            <h4>Start Saving/Investing</h4>
-                            <p>Choose a savings plan or investment option and fund your account</p>
+                            <h4>Start Saving</h4>
+                            <p>Choose a savings plan option and fund your account</p>
                         </div>
                     </div>
                 </div>
@@ -239,9 +242,9 @@
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                     <h5 class="text-white mb-4">Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Lagos, Nigeria</li>
-                        <li class="mb-2"><i class="fas fa-envelope me-2"></i> hello@Saverite.com</li>
-                        <li><i class="fas fa-phone me-2"></i> +234 800 000 0000</li>
+                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> House 4 Road 3 Unilag Estate Idimu</li>
+                        <li class="mb-2"><i class="fas fa-envelope me-2"></i> enquiries@saveriteapp.com</li>
+                        <li><i class="fas fa-phone me-2"></i> +234 904 000 2222</li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6">
