--- a/about.html
+++ b/about.html
@@ -31,12 +31,6 @@
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="invest.html">Invest</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="faq.html">FAQs</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -51,7 +45,7 @@
     <section class="hero-section">
         <div class="container text-center">
             <h1 class="display-4 fw-bold mb-3">About Saverite</h1>
-            <p class="lead">Our mission is to make savings and investment accessible to everyone</p>
+            <p class="lead">The Borrower is a Servant to the Lender- Set yourself FREE</p>
         </div>
     </section>
 
@@ -61,9 +55,10 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
                     <h2 class="fw-bold mb-4">Our Story</h2>
-                    <p>Saverite was founded in 2022 with a vision to democratize access to financial growth opportunities for all Nigerians. We recognized that traditional banking systems often fail to provide meaningful returns on savings, while investment opportunities remain out of reach for many.</p>
-                    <p>Our platform bridges this gap by offering a simple, secure, and rewarding way to save and invest, regardless of your financial knowledge or the size of your capital.</p>
-                    <p>Today, we're proud to serve thousands of customers across Nigeria, helping them achieve their financial goals through our innovative platform.</p>
+                    <p>At Saverite we help you save either daily, weekly or monthly towards securing your financial future. Our products are tailored to offer you hitch-free savings regardless of the amount empowering you to achieve short to long-term financial goals effortlessly.</p>
+                    <p> From monthly savings target to annual financial goal, we walk with you every step of the way to your financial security, ensuring a stable and prosperous future for you and your loved ones.</p>
+                    <p>Become a member today and let's embark on this rewarding savings journey together!
+                    </p>
                 </div>
                 <div class="col-lg-6">
                     <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" 
@@ -218,9 +213,9 @@
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                     <h5 class="text-white mb-4">Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Lagos, Nigeria</li>
-                        <li class="mb-2"><i class="fas fa-envelope me-2"></i> hello@Saverite.com</li>
-                        <li><i class="fas fa-phone me-2"></i> +234 800 000 0000</li>
+                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> House 4 Road 3 Unilag Estate Idimu</li>
+                        <li class="mb-2"><i class="fas fa-envelope me-2"></i> enquiries@saveriteapp.com</li>
+                        <li><i class="fas fa-phone me-2"></i> +234 904 000 2222</li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6">
