--- a/invest.html
+++ b/invest.html
@@ -54,12 +54,6 @@
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="invest.html">Invest</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="faq.html">FAQs</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -272,9 +266,9 @@
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                     <h5 class="text-white mb-4">Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Lagos, Nigeria</li>
-                        <li class="mb-2"><i class="fas fa-envelope me-2"></i> hello@Saverite.com</li>
-                        <li><i class="fas fa-phone me-2"></i> +234 800 000 0000</li>
+                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> House 4 Road 3 Unilag Estate Idimu</li>
+                        <li class="mb-2"><i class="fas fa-envelope me-2"></i> enquiries@saveriteapp.com</li>
+                        <li><i class="fas fa-phone me-2"></i> +234 904 000 2222</li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6">
