--- a/about.html
+++ b/about.html
@@ -205,8 +205,6 @@
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
                         <li class="mb-2"><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
-                        <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Invest</a></li>
-                        <li class="mb-2"><a href="faqs.html" class="text-white text-decoration-none">FAQs</a></li>
                         <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
                     </ul>
                 </div>
@@ -231,8 +229,8 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="small mb-0">
-                        <a href="#" class="text-white text-decoration-none">Privacy Policy</a> | 
-                        <a href="#" class="text-white text-decoration-none">Terms of Service</a>
+                        <a href="privacy.html" class="text-white text-decoration-none">Privacy Policy</a> | 
+                        <a href="terms.html" class="text-white text-decoration-none">Terms of Service</a>
                     </p>
                 </div>
             </div>
