--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
         </div>
     </section>
 
+    <!-- CTA Section -->
+    <section class="py-5 bg-primary text-white">
+        <div class="container text-center">
+            <h2 class="fw-bold mb-4">Ready to Grow Your Money?</h2>
+            <p class="lead mb-5">Join thousands of Nigerians who are taking control of their finances with Saverite</p>
+            <div class="d-flex justify-content-center flex-wrap">
+                <a href="#" class="btn btn-light btn-lg me-3 mb-3">BECOME A MEMBER</a>
+                <!-- <a href="invest.html" class="btn btn-outline-light btn-lg mb-3">Learn About Investing</a> -->
+            </div>
+        </div>
+    </section>
+
     <!-- How It Works -->
     <section class="py-5 bg-light">
         <div class="container">
@@ -201,18 +213,6 @@
         </div>
     </section>
 
-    <!-- CTA Section -->
-    <section class="py-5 bg-primary text-white">
-        <div class="container text-center">
-            <h2 class="fw-bold mb-4">Ready to Grow Your Money?</h2>
-            <p class="lead mb-5">Join thousands of Nigerians who are taking control of their finances with Saverite</p>
-            <div class="d-flex justify-content-center flex-wrap">
-                <a href="#" class="btn btn-light btn-lg me-3 mb-3">Download App</a>
-                <a href="invest.html" class="btn btn-outline-light btn-lg mb-3">Learn About Investing</a>
-            </div>
-        </div>
-    </section>
-
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -234,8 +234,6 @@
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
                         <li class="mb-2"><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
-                        <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Invest</a></li>
-                        <li class="mb-2"><a href="faqs.html" class="text-white text-decoration-none">FAQs</a></li>
                         <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
                     </ul>
                 </div>
@@ -260,8 +258,8 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="small mb-0">
-                        <a href="#" class="text-white text-decoration-none">Privacy Policy</a> | 
-                        <a href="#" class="text-white text-decoration-none">Terms of Service</a>
+                        <a href="privacy.html" class="text-white text-decoration-none">Privacy Policy</a> | 
+                        <a href="terms.html" class="text-white text-decoration-none">Terms of Service</a>
                     </p>
                 </div>
             </div>
