--- a/invest.html
+++ b/invest.html
@@ -284,8 +284,8 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="small mb-0">
-                        <a href="#" class="text-white text-decoration-none">Privacy Policy</a> | 
-                        <a href="#" class="text-white text-decoration-none">Terms of Service</a>
+                        <a href="privacy.html" class="text-white text-decoration-none">Privacy Policy</a> | 
+                        <a href="terms.html" class="text-white text-decoration-none">Terms of Service</a>
                     </p>
                 </div>
             </div>
