--- a/contact.html
+++ b/contact.html
@@ -81,10 +81,10 @@
                 </h5>
                 <p>Smart savings and investment platform helping individuals grow their wealth with competitive returns and flexible options.</p>
                 <div class="mt-4">
-                    <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61578107497390" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://x.com/Saverite1" class="text-white me-3"><i class="fab fa-x"></i></a>
+                    <a href="https://www.instagram.com/theSaverite/" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tiktok.com/@saverite" class="text-white"><i class="fab fa-tiktok"></i></a>
                 </div>
             </div>
             <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
@@ -127,3 +127,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+<!-- 
+instagram - https://www.instagram.com/theSaverite/
+
+Facebook - https://www.facebook.com/profile.php?id=61578107497390
+
+x - https://x.com/Saverite1
+
+tiktok - https://www.tiktok.com/@saverite -->
