--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,8 @@
             <a class="navbar-brand" href="index.html">
                 <img src="images/logo.jpg" alt="Saverite Logo" style="height: 100px; width: 200px;">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"           style="border: none; box-shadow: none; outline: none; background: transparent;"
+            >
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -27,6 +28,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="invest.html">Investment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -45,8 +49,8 @@
     <div class="row">
       <div class="col-md-6 mb-4">
         <h5>Contact Details</h5>
-        <p><strong>Address:</strong> House 4 Road 3 Unilag Estate Idimu</p>
-        <p><strong>Email:</strong> enquiries@saveriteapp.com</p>
+        <p><strong>Address:</strong> House 4, Road 3 Unilag Estate Idimu, Lagos</p>
+        <p><strong>Email:</strong> enquiries@saveriteapp.com.ng</p>
         <p><strong>Phone:</strong> +234 904 000 2222</p>
       </div>
 
@@ -92,14 +96,15 @@
                 <ul class="list-unstyled">
                     <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
                     <li class="mb-2"><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
+                    <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Investment</a></li>
                     <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
                 </ul>
             </div>
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                 <h5 class="text-white mb-4">Contact Us</h5>
                 <ul class="list-unstyled">
-                    <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> House 4 Road 3 Unilag Estate Idimu</li>
-                    <li class="mb-2"><i class="fas fa-envelope me-2"></i> enquiries@saveriteapp.com</li>
+                    <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> House 4, Road 3 Unilag Estate Idimu, Lagos</li>
+                    <li class="mb-2"><i class="fas fa-envelope me-2"></i> enquiries@saveriteapp.com.ng</li>
                     <li><i class="fas fa-phone me-2"></i> +234 904 000 2222</li>
                 </ul>
             </div>
