--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="invest.html">Investment</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -234,14 +237,15 @@
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
                         <li class="mb-2"><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
+                        <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Investment</a></li>
                         <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                     <h5 class="text-white mb-4">Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> House 4 Road 3 Unilag Estate Idimu</li>
-                        <li class="mb-2"><i class="fas fa-envelope me-2"></i> enquiries@saveriteapp.com</li>
+                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> House 4, Road 3 Unilag Estate Idimu, Lagos</li>
+                        <li class="mb-2"><i class="fas fa-envelope me-2"></i> enquiries@saveriteapp.com.ng</li>
                         <li><i class="fas fa-phone me-2"></i> +234 904 000 2222</li>
                     </ul>
                 </div>
