--- a/terms.html
+++ b/terms.html
@@ -41,32 +41,35 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="images/logo.jpg" alt="Saverite Logo" style="height: 100px; width: 200px;">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"           style="border: none; box-shadow: none; outline: none; background: transparent;"
-            >
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-                <div class="ms-lg-3 mt-3 mt-lg-0">
-                    <a href="#" class="btn btn-primary">Download App</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+      <div class="container">
+          <a class="navbar-brand" href="index.html">
+              <img src="images/logo.jpg" alt="Saverite Logo" style="height: 100px; width: 200px;">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"           style="border: none; box-shadow: none; outline: none; background: transparent;"
+          >
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                      <a class="nav-link active" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="about.html">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="invest.html">Investment</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+              </ul>
+              <div class="ms-lg-3 mt-3 mt-lg-0">
+                  <a href="#" class="btn btn-primary">Download App</a>
+              </div>
+          </div>
+      </div>
+  </nav>
 
 
     <div class="container">
@@ -143,56 +146,57 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 mb-4 mb-lg-0">
-                    <h5 class="text-white mb-4">
-                        <img src="images/logo.jpg" height="100" width="200">
-                    </h5>
-                    <p>Smart savings and investment platform helping individuals grow their wealth with competitive returns and flexible options.</p>
-                    <div class="mt-4">
-                        <a href="https://www.facebook.com/profile.php?id=61578107497390" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://x.com/Saverite1" class="text-white me-3"><i class="fab fa-x"></i></a>
-                        <a href="https://www.instagram.com/theSaverite/" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.tiktok.com/@saverite" class="text-white"><i class="fab fa-tiktok"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-white mb-4">Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
-                        <li class="mb-2"><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
-                        <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-white mb-4">Contact Us</h5>
-                    <ul class="list-unstyled">
-                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> House 4 Road 3 Unilag Estate Idimu</li>
-                        <li class="mb-2"><i class="fas fa-envelope me-2"></i> enquiries@saveriteapp.com</li>
-                        <li><i class="fas fa-phone me-2"></i> +234 904 000 2222</li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Download App</h5>
-                    <img src="images/apple.png" alt="">
-                    <img src="images/google.png" alt="">
-                </div>
-            </div>
-            <hr class="my-4 bg-secondary">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start">
-                    <p class="small mb-0">&copy; 2025 Saverite. All rights reserved.</p>
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <p class="small mb-0">
-                        <a href="privacy.html" class="text-white text-decoration-none">Privacy Policy</a> | 
-                        <a href="terms.html" class="text-white text-decoration-none">Terms of Service</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-4 mb-4 mb-lg-0">
+                  <h5 class="text-white mb-4">
+                      <img src="images/logo.jpg" height="100" width="200">
+                  </h5>
+                  <p>Smart savings and investment platform helping individuals grow their wealth with competitive returns and flexible options.</p>
+                  <div class="mt-4">
+                      <a href="https://www.facebook.com/profile.php?id=61578107497390" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
+                      <a href="https://x.com/Saverite1" class="text-white me-3"><i class="fab fa-x"></i></a>
+                      <a href="https://www.instagram.com/theSaverite/" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                      <a href="https://www.tiktok.com/@saverite" class="text-white"><i class="fab fa-tiktok"></i></a>
+                  </div>
+              </div>
+              <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-white mb-4">Quick Links</h5>
+                  <ul class="list-unstyled">
+                    <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
+                    <li class="mb-2"><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
+                    <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Investment</a></li>
+                    <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
+                </ul>
+              </div>
+              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-white mb-4">Contact Us</h5>
+                  <ul class="list-unstyled">
+                    <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> House 4, Road 3 Unilag Estate Idimu, Lagos</li>
+                    <li class="mb-2"><i class="fas fa-envelope me-2"></i> enquiries@saveriteapp.com.ng</li>
+                    <li><i class="fas fa-phone me-2"></i> +234 904 000 2222</li>
+                </ul>
+              </div>
+              <div class="col-lg-3 col-md-6">
+                  <h5 class="text-white mb-4">Download App</h5>
+                  <a href="#"><img src="images/google.png" alt="Google Play" class="app-badge"></a>
+                      <a href="#"><img src="images/apple.png" alt="App Store" class="app-badge"></a>
+              </div>
+          </div>
+          <hr class="my-4 bg-secondary">
+          <div class="row">
+              <div class="col-md-6 text-center text-md-start">
+                  <p class="small mb-0">&copy; 2025 Saverite. All rights reserved.</p>
+              </div>
+              <div class="col-md-6 text-center text-md-end">
+                  <p class="small mb-0">
+                      <a href="privacy.html" class="text-white text-decoration-none">Privacy Policy</a> | 
+                      <a href="terms.html" class="text-white text-decoration-none">Terms of Service</a>
+                  </p>
+              </div>
+          </div>
+      </div>
+  </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
