--- a/terms.html
+++ b/terms.html
@@ -57,9 +57,9 @@
                   <li class="nav-item">
                       <a class="nav-link" href="about.html">About Us</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                       <a class="nav-link" href="invest.html">Investment</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                       <a class="nav-link" href="contact.html">Contact</a>
                   </li>
@@ -165,7 +165,7 @@
                   <ul class="list-unstyled">
                     <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
                     <li class="mb-2"><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
-                    <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Investment</a></li>
+                    <!-- <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Investment</a></li> -->
                     <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
                 </ul>
               </div>
