--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="invest.html">Investment</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="invest.html">Savings</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
@@ -83,7 +83,7 @@
                 <h5 class="text-white mb-4">
                     <img src="images/logo.jpg" height="100" width="200">
                 </h5>
-                <p>Smart savings and investment platform helping individuals grow their wealth with competitive returns and flexible options.</p>
+                <p>Smart savings and platform helping individuals grow their wealth with competitive returns and flexible options.</p>
                 <div class="mt-4">
                     <a href="https://www.facebook.com/profile.php?id=61578107497390" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://x.com/Saverite1" class="text-white me-3"><i class="fab fa-x"></i></a>
@@ -96,7 +96,7 @@
                 <ul class="list-unstyled">
                     <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
                     <li class="mb-2"><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
-                    <!-- <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Investment</a></li> -->
+                    <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Savings</a></li>
                     <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
                 </ul>
             </div>
