--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saverite - Smart Savings & Investment Platform</title>
+    <title>Saverite - Smart Savings Platform</title>
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -30,9 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="invest.html">Investment</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="invest.html">Savings</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h1 class="display-4 fw-bold mb-4">Smart Savings & Investment Platform</h1>
+                    <h1 class="display-4 fw-bold mb-4">Smart Savings Platform</h1>
                     <p class="lead mb-4">Saverite helps you save with ease, offering competitive returns on your savings and flexible target options.</p>
                     <div class="d-flex flex-wrap">
                         <a href="#"><img src="images/google.png" alt="Google Play" class="app-badge"></a>
@@ -224,7 +224,7 @@
                     <h5 class="text-white mb-4">
                         <img src="images/logo.jpg" height="100" width="200">
                     </h5>
-                    <p>Smart savings and investment platform helping individuals grow their wealth with competitive returns and flexible options.</p>
+                    <p>Smart savings and platform helping individuals grow their wealth with competitive returns and flexible options.</p>
                     <div class="mt-4">
                         <a href="https://www.facebook.com/profile.php?id=61578107497390" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://x.com/Saverite1" class="text-white me-3"><i class="fab fa-x"></i></a>
@@ -237,7 +237,7 @@
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
                         <li class="mb-2"><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
-                        <!-- <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Investment</a></li> -->
+                        <li class="mb-2"><a href="invest.html" class="text-white text-decoration-none">Savings</a></li>
                         <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
                     </ul>
                 </div>
